expected/main/lc/illegal-data-rhs.err
ERROR: "actual/main/lc/illegal-data-rhs.llc", line 3
  data T = a -> b
           ^
Missing constructor function name (unexpected identifier "a")

ERROR: "actual/main/lc/illegal-data-rhs.llc", line 3
  data T = a -> b
             ^
Missing :: (unexpected "->" symbol)

ERROR: "actual/main/lc/illegal-data-rhs.llc", line 3
  data T = a -> b
             ^
Trailing token(s) ("->" symbol) at end of input

ERROR: Aborting after 3 previously reported errors

